add versioning with reckon plugin
needs java 11+ to work properly